############################## 
# Process this file with autoconf to produce a configure script.
#
# 10/15/03
#  - The first release.
# 03/15/04
#  - Thanks for Simon Goodall
#  - Added the following enable options
#    enable-x3d, enable-opengl, enable-jpeg, enable-png
#  - Added CyberX3D version flag using AC_SUBST.
# 10/20/04
#   - Thanks for Vesa A Norrman
#   - Added some paches to support install command.
#   - Fix some bugs such as 'if test "$enableval" == "yes"'.
#   - Changed the boostrap script
# 03/29/07
#   - Changed SUPPORT_JPEG into CX3D_SUPPORT_JPEG.
#   - Changed SUPPORT_PNG into CX3D_SUPPORT_PNG.
#	- Added --enable-gzip
#
############################## 
 
AC_INIT(include/cybergarage/x3d/CyberX3D.h)
CX3D_MAJOR_VERSION=1
CX3D_MINOR_VERSION=0
CX3D_MICRO_VERSION=1
CX3D_VERSION=$CX3D_MAJOR_VERSION.$CX3D_MINOR_VERSION.$CX3D_MICRO_VERSION
AC_SUBST(CX3D_VERSION)

CX3D_CURRENT=1
CX3D_REVISION=0
CX3D_AGE=0
CX3D_VERSION_INFO=$CX3D_CURRENT:$CX3D_REVISION:$CX3D_AGE
AC_SUBST(CX3D_VERSION_INFO)

AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(cx3d, $CX3D_VERSION)
AM_CONFIG_HEADER(config.h)

############################## 
# Checks for programs.
############################## 

AC_PROG_CC
AC_PROG_CXX
# Thanks for Vesa A Norrman (2004/10/20)
#AC_PROG_RANLIB
AM_PROG_LIBTOOL

##############################
# Enable debug mode
##############################

AC_ARG_ENABLE(debug,
  [  --enable-debug     enable debug information [default=no]],
  [
    if test "$enableval" = "yes"; then
      CXXFLAGS="-ggdb -DDEBUG"
      debug="true"
    else
      CXXFLAGS="$CXXFLAGS -O2 -DNDEBUG"
      debug="false"
    fi
  ],[
    CXXFLAGS="$CXXFLAGS -O2 -DNDEBUG"
    debug="false"
  ]
)
AM_CONDITIONAL(DEBUG, test x$debug = xtrue)

############################## 
# Checks for Xerces libraries.
############################## 

AC_ARG_ENABLE(x3d,
    [ --enable-x3d enable X3D [default=yes]],
    [
        if test "$enableval" = "yes"; then
            check_x3d="yes"
        else
            check_x3d="no"
        fi
    ],[
        check_x3d="yes"
    ]
)
if test "$check_x3d" = "yes"; then
XERCES_VERSION=2.3.0
AC_CHECK_HEADERS([xercesc/util/XercesVersion.hpp],[AC_DEFINE([CX3D_SUPPORT_X3D],1,[X3D])],[AC_MSG_RESULT(no)])
AC_CHECK_LIB(xerces-c,main)
fi

############################## 
# Checks for OpenGL libraries.
############################## 

AC_ARG_ENABLE(opengl,
    [ --enable-opengl enable OpenGL [default=yes]],
    [
        if test "$enableval" = "yes"; then
            check_opengl="yes"
        else
            check_opengl="no"
        fi
    ],[
        check_opengl="yes"
    ]
)
if test "$check_opengl" = "yes"; then
AC_CHECK_HEADER([GL/gl.h],[AC_DEFINE([CX3D_SUPPORT_OPENGL],1,[OpenGL])])
AC_CHECK_LIB([GL],[glEnable])
AC_CHECK_LIB([GLU],[gluLookAt])
AC_CHECK_HEADER([GL/glut.h],[AC_DEFINE([CX3D_SUPPORT_GLUT],1,[GLUT]) HAVE_OPEN_GLUT=yes],[HAVE_OPEN_GLUT=no])
if [ test $HAVE_OPEN_GLUT = yes ]; then
	AC_CHECK_LIB([glut],[glutInit],,[LIBS="$LIBS -lglut"])
fi
# Checks for OpenGL libraries (MacOSX).
AC_CHECK_HEADER(
[OpenGL/gl.h],
[AC_DEFINE([CX3D_SUPPORT_OPENGL],1,[OpenGL]) AC_DEFINE([MACOSX],1,[MacOSX]) LIBS="$LIBS -framework OpenGL"]
)
AC_CHECK_HEADER(
[GLUT/glut.h],
[AC_DEFINE([CX3D_SUPPORT_GLUT],1,[GLUT]) AC_DEFINE([MACOSX],1,[MacOSX]) LIBS="$LIBS -framework GLUT"]
)
fi

############################## 
# Checks for PNG libraries.
############################## 

AC_ARG_ENABLE(png,
    [  --enable-png		enable png support [default=yes]],
    [
        if test "$enableval" = "yes"; then
            check_png="yes"
        else
            check_png="no"
        fi
    ],[
        check_png="yes"
    ]
)
if test "$check_png" = "yes"; then
AC_CHECK_HEADER([png.h],[AC_DEFINE([CX3D_SUPPORT_PNG],1,[PNG]) HAVE_PNG=yes],[HAVE_PNG=no])
if [ test $HAVE_PNG = yes ]; then
	AC_CHECK_LIB([png],[png_read_info],,[LIBS="$LIBS -lpng"])
fi
fi

############################## 
# Checks for JPEG libraries.
############################## 

AC_ARG_ENABLE(jpeg,
    [ --enable-jpeg enable jpeg support [default=yes]],
    [
        if test "$enableval" = "yes"; then
            check_jpeg="yes"
        else
            check_jpeg="no"
        fi
    ],[
        check_jpeg="yes"
    ]
)
if test "$check_jpeg" = "yes"; then
AC_CHECK_HEADER([jpeglib.h],[AC_DEFINE([CX3D_SUPPORT_JPEG],1,[JPEG]) HAVE_JPEG=yes],[HAVE_JPEG=no])
if [ test $HAVE_JPEG = yes ]; then
	AC_CHECK_LIB([jpeg],[jpeg_read_header],,[LIBS="$LIBS -ljpeg"])
fi
fi

############################## 
# Checks for ZLIB libraries.
############################## 

AC_ARG_ENABLE(gzip,
    [ --enable-gzip enable gzip support [default=yes]],
    [
        if test "$enableval" = "yes"; then
            check_gzip="yes"
        else
            check_gzip="no"
        fi
    ],[
        check_gzip="yes"
    ]
)
if test "$check_gzip" = "yes"; then
AC_CHECK_HEADER([zlib.h],[AC_DEFINE([CX3D_SUPPORT_GZIP],1,[GZIP]) HAVE_ZLIB=yes],[HAVE_ZLIB=no])
if [ test $HAVE_ZLIB = yes ]; then
	AC_CHECK_LIB([z],[gzopen],,[LIBS="$LIBS -lz"])
fi
fi

############################## 
# Checks for header files.
############################## 

AC_HEADER_STDC
AC_CHECK_HEADERS([float.h memory.h stddef.h stdlib.h string.h sys/time.h sys/timeb.h])
 
############################## 
# Checks for typedefs, structures, and compiler characteristics.
############################## 

#AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME

############################## 
# Checks for library functions.
############################## 

AC_FUNC_ERROR_AT_LINE
#AC_FUNC_MALLOC
#AC_FUNC_REALLOC
AC_CHECK_FUNCS([ftime gettimeofday memset sqrt strdup])
AC_CHECK_LIB(z, gzopen)

AC_PATH_X
AC_PATH_XTRA

CX3D_REQUIRES=""
CX3D_LIBSUFFIX="-1.0"
CX3D_LIBS="-lcx3d$CX3D_LIBSUFFIX $LIBS"

AC_SUBST(CX3D_REQUIRES)
AC_SUBST(CX3D_LIBS)

AC_OUTPUT([
cx3d-1.0.pc
Makefile
src/Makefile
src/cybergarage/Makefile
src/cybergarage/x3d/Makefile
include/Makefile
include/cybergarage/Makefile
include/cybergarage/x3d/Makefile
sample/Makefile
sample/X3DBrowser/Makefile
sample/X3DBrowser/glut/Makefile
sample/X3DBrowser/glut/unix/Makefile
sample/vrml2x3d/Makefile
sample/vrml2x3d/unix/Makefile
sample/x3d2vrml/Makefile
sample/x3d2vrml/unix/Makefile
])
