#noinst_LIBRARIES = libcx3d.a
cx3dincludedir=$(includedir)/cybergarage/x3d

lib_LTLIBRARIES = libcx3d.la

INCLUDES = -I$(top_srcdir)/include

#CX3D_INCLUDE_DIR = ../../src/cybergarage/x3d/
#CX3D_SRC_DIR = ../../src/cybergarage/x3d/

#libcx3d_a_HEADERS =
#noinst_HEADERS = \
cx3dinclude_HEADERS = \
	../../include/cybergarage/x3d/AnchorNode.h \
	../../include/cybergarage/x3d/AppearanceChildNode.h \
	../../include/cybergarage/x3d/AppearanceNode.h \
	../../include/cybergarage/x3d/Arc2DNode.h \
	../../include/cybergarage/x3d/ArcClose2DNode.h \
	../../include/cybergarage/x3d/AudioClipNode.h \
	../../include/cybergarage/x3d/BackgroundNode.h \
	../../include/cybergarage/x3d/BillboardNode.h \
	../../include/cybergarage/x3d/BindableNode.h \
	../../include/cybergarage/x3d/BooleanFilterNode.h \
	../../include/cybergarage/x3d/BooleanSequencerNode.h \
	../../include/cybergarage/x3d/BooleanTimeTriggerNode.h \
	../../include/cybergarage/x3d/BooleanToggleNode.h \
	../../include/cybergarage/x3d/BooleanTriggerNode.h \
	../../include/cybergarage/x3d/Bounded2DNode.h \
	../../include/cybergarage/x3d/Bounded2DObject.h \
	../../include/cybergarage/x3d/BoundedGrouping2DNode.h \
	../../include/cybergarage/x3d/BoundedGroupingNode.h \
	../../include/cybergarage/x3d/BoundedNode.h \
	../../include/cybergarage/x3d/BoundedObject.h \
	../../include/cybergarage/x3d/BoundingBox.h \
	../../include/cybergarage/x3d/BoundingBox2D.h \
	../../include/cybergarage/x3d/BoxNode.h \
	../../include/cybergarage/x3d/Circle2DNode.h \
	../../include/cybergarage/x3d/CollisionNode.h \
	../../include/cybergarage/x3d/ColorInterpolatorNode.h \
	../../include/cybergarage/x3d/ColorNode.h \
	../../include/cybergarage/x3d/ColorRGBANode.h \
	../../include/cybergarage/x3d/ComposedGeometryNode.h \
	../../include/cybergarage/x3d/ConeNode.h \
	../../include/cybergarage/x3d/CoordinateInterpolator2DNode.h \
	../../include/cybergarage/x3d/CoordinateInterpolatorNode.h \
	../../include/cybergarage/x3d/CoordinateNode.h \
	../../include/cybergarage/x3d/CyberX3D.h \
	../../include/cybergarage/x3d/CyberX3DConfig.h \
	../../include/cybergarage/x3d/CylinderNode.h \
	../../include/cybergarage/x3d/CylinderSensorNode.h \
	../../include/cybergarage/x3d/DEF.h \
	../../include/cybergarage/x3d/DEFNode.h \
	../../include/cybergarage/x3d/DirectionalLightNode.h \
	../../include/cybergarage/x3d/Disk2DNode.h \
	../../include/cybergarage/x3d/DragSensorNode.h \
	../../include/cybergarage/x3d/ElevationGridNode.h \
	../../include/cybergarage/x3d/EnvironmentalSensorNode.h \
	../../include/cybergarage/x3d/Event.h \
	../../include/cybergarage/x3d/ExtrusionNode.h \
	../../include/cybergarage/x3d/Field.h \
	../../include/cybergarage/x3d/FileGIF89a.h \
	../../include/cybergarage/x3d/FileImage.h \
	../../include/cybergarage/x3d/FileJPEG.h \
	../../include/cybergarage/x3d/FilePNG.h \
	../../include/cybergarage/x3d/FileTarga.h \
	../../include/cybergarage/x3d/FileUtil.h \
	../../include/cybergarage/x3d/FillPropertiesNode.h \
	../../include/cybergarage/x3d/FogNode.h \
	../../include/cybergarage/x3d/FontStyleNode.h \
	../../include/cybergarage/x3d/GeometricPropertyNode.h \
	../../include/cybergarage/x3d/Geometry2DNode.h \
	../../include/cybergarage/x3d/Geometry3DNode.h \
	../../include/cybergarage/x3d/GeometryNode.h \
	../../include/cybergarage/x3d/Graphic3D.h \
	../../include/cybergarage/x3d/GroupNode.h \
	../../include/cybergarage/x3d/Grouping2DNode.h \
	../../include/cybergarage/x3d/GroupingNode.h \
	../../include/cybergarage/x3d/ImageTextureNode.h \
	../../include/cybergarage/x3d/IndexedFaceSetNode.h \
	../../include/cybergarage/x3d/IndexedLineSetNode.h \
	../../include/cybergarage/x3d/InfoNode.h \
	../../include/cybergarage/x3d/InlineNode.h \
	../../include/cybergarage/x3d/IntegerSequencerNode.h \
	../../include/cybergarage/x3d/IntegerTriggerNode.h \
	../../include/cybergarage/x3d/InterpolatorNode.h \
	../../include/cybergarage/x3d/JNode.h \
	../../include/cybergarage/x3d/JScript.h \
	../../include/cybergarage/x3d/JavaVM.h \
	../../include/cybergarage/x3d/KeyDeviceSensorNode.h \
	../../include/cybergarage/x3d/KeySensorNode.h \
	../../include/cybergarage/x3d/LODNode.h \
	../../include/cybergarage/x3d/LightNode.h \
	../../include/cybergarage/x3d/LinePropertiesNode.h \
	../../include/cybergarage/x3d/LinkedList.h \
	../../include/cybergarage/x3d/LinkedListNode.h \
	../../include/cybergarage/x3d/LoadSensorNode.h \
	../../include/cybergarage/x3d/MFBool.h \
	../../include/cybergarage/x3d/MFChar.h \
	../../include/cybergarage/x3d/MFColor.h \
	../../include/cybergarage/x3d/MFColorRGBA.h \
	../../include/cybergarage/x3d/MFDouble.h \
	../../include/cybergarage/x3d/MFFloat.h \
	../../include/cybergarage/x3d/MFInt32.h \
	../../include/cybergarage/x3d/MFNode.h \
	../../include/cybergarage/x3d/MFRotation.h \
	../../include/cybergarage/x3d/MFString.h \
	../../include/cybergarage/x3d/MFTime.h \
	../../include/cybergarage/x3d/MFVec2d.h \
	../../include/cybergarage/x3d/MFVec2f.h \
	../../include/cybergarage/x3d/MFVec3d.h \
	../../include/cybergarage/x3d/MFVec3f.h \
	../../include/cybergarage/x3d/MField.h \
	../../include/cybergarage/x3d/MaterialNode.h \
	../../include/cybergarage/x3d/MathUtil.h \
	../../include/cybergarage/x3d/MovieTextureNode.h \
	../../include/cybergarage/x3d/MultiTextureCoordinateNode.h \
	../../include/cybergarage/x3d/MultiTextureNode.h \
	../../include/cybergarage/x3d/MultiTextureTransformNode.h \
	../../include/cybergarage/x3d/NavigationInfoNode.h \
	../../include/cybergarage/x3d/NetworkSensorNode.h \
	../../include/cybergarage/x3d/Node.h \
	../../include/cybergarage/x3d/NodeList.h \
	../../include/cybergarage/x3d/NodeSequencerNode.h \
	../../include/cybergarage/x3d/NodeString.h \
	../../include/cybergarage/x3d/NodeType.h \
	../../include/cybergarage/x3d/NormalInterpolatorNode.h \
	../../include/cybergarage/x3d/NormalNode.h \
	../../include/cybergarage/x3d/OldCpp.h \
	../../include/cybergarage/x3d/OrientationInterpolatorNode.h \
	../../include/cybergarage/x3d/PROTO.h \
	../../include/cybergarage/x3d/Parser.h \
	../../include/cybergarage/x3d/ParserFunc.h \
	../../include/cybergarage/x3d/ParserNode.h \
	../../include/cybergarage/x3d/ParserResult.h \
	../../include/cybergarage/x3d/PixelTextureNode.h \
	../../include/cybergarage/x3d/PlaneSensorNode.h \
	../../include/cybergarage/x3d/PointLightNode.h \
	../../include/cybergarage/x3d/PointSetNode.h \
	../../include/cybergarage/x3d/PointingDeviceSensorNode.h \
	../../include/cybergarage/x3d/Polyline2DNode.h \
	../../include/cybergarage/x3d/Polypoint2DNode.h \
	../../include/cybergarage/x3d/PositionInterpolator2DNode.h \
	../../include/cybergarage/x3d/PositionInterpolatorNode.h \
	../../include/cybergarage/x3d/ProximitySensorNode.h \
	../../include/cybergarage/x3d/Rectangle2DNode.h \
	../../include/cybergarage/x3d/RootNode.h \
	../../include/cybergarage/x3d/Route.h \
	../../include/cybergarage/x3d/RouteList.h \
	../../include/cybergarage/x3d/RouteNode.h \
	../../include/cybergarage/x3d/SFBool.h \
	../../include/cybergarage/x3d/SFChar.h \
	../../include/cybergarage/x3d/SFColor.h \
	../../include/cybergarage/x3d/SFColorRGBA.h \
	../../include/cybergarage/x3d/SFDouble.h \
	../../include/cybergarage/x3d/SFFloat.h \
	../../include/cybergarage/x3d/SFImage.h \
	../../include/cybergarage/x3d/SFInt32.h \
	../../include/cybergarage/x3d/SFMatrix.h \
	../../include/cybergarage/x3d/SFNode.h \
	../../include/cybergarage/x3d/SFRotation.h \
	../../include/cybergarage/x3d/SFString.h \
	../../include/cybergarage/x3d/SFTime.h \
	../../include/cybergarage/x3d/SFVec2d.h \
	../../include/cybergarage/x3d/SFVec2f.h \
	../../include/cybergarage/x3d/SFVec3d.h \
	../../include/cybergarage/x3d/SFVec3f.h \
	../../include/cybergarage/x3d/ScalarInterpolatorNode.h \
	../../include/cybergarage/x3d/Scene.h \
	../../include/cybergarage/x3d/SceneGraph.h \
	../../include/cybergarage/x3d/SceneNode.h \
	../../include/cybergarage/x3d/ScriptNode.h \
	../../include/cybergarage/x3d/SensorNode.h \
	../../include/cybergarage/x3d/SequencerNode.h \
	../../include/cybergarage/x3d/Shape2DNode.h \
	../../include/cybergarage/x3d/ShapeNode.h \
	../../include/cybergarage/x3d/SoundNode.h \
	../../include/cybergarage/x3d/SoundSourceNode.h \
	../../include/cybergarage/x3d/SphereNode.h \
	../../include/cybergarage/x3d/SphereSensorNode.h \
	../../include/cybergarage/x3d/SpotLightNode.h \
	../../include/cybergarage/x3d/StaticGroupNode.h \
	../../include/cybergarage/x3d/StringSensorNode.h \
	../../include/cybergarage/x3d/StringUtil.h \
	../../include/cybergarage/x3d/SwitchNode.h \
	../../include/cybergarage/x3d/TextNode.h \
	../../include/cybergarage/x3d/Texture2DNode.h \
	../../include/cybergarage/x3d/TextureCoordinateGeneratorNode.h \
	../../include/cybergarage/x3d/TextureCoordinateNode.h \
	../../include/cybergarage/x3d/TextureNode.h \
	../../include/cybergarage/x3d/TextureTransformNode.h \
	../../include/cybergarage/x3d/TimeSensorNode.h \
	../../include/cybergarage/x3d/TimeTriggerNode.h \
	../../include/cybergarage/x3d/TouchSensorNode.h \
	../../include/cybergarage/x3d/Transform2DNode.h \
	../../include/cybergarage/x3d/TransformNode.h \
	../../include/cybergarage/x3d/TriangleFanSetNode.h \
	../../include/cybergarage/x3d/TriangleSet2DNode.h \
	../../include/cybergarage/x3d/TriangleSetNode.h \
	../../include/cybergarage/x3d/TriangleStripSetNode.h \
	../../include/cybergarage/x3d/TriggerNode.h \
	../../include/cybergarage/x3d/UrlFile.h \
	../../include/cybergarage/x3d/VRML97.tab.h \
	../../include/cybergarage/x3d/VRML97Fields.h \
	../../include/cybergarage/x3d/VRML97Nodes.h \
	../../include/cybergarage/x3d/VRML97Parser.h \
	../../include/cybergarage/x3d/VRML97ParserFunc.h \
	../../include/cybergarage/x3d/Vector.h \
	../../include/cybergarage/x3d/ViewpointNode.h \
	../../include/cybergarage/x3d/VisibilitySensorNode.h \
	../../include/cybergarage/x3d/WorldInfoNode.h \
	../../include/cybergarage/x3d/X3DFields.h \
	../../include/cybergarage/x3d/X3DNodes.h \
	../../include/cybergarage/x3d/X3DParser.h \
	../../include/cybergarage/x3d/X3DParserHandlers.h \
	../../include/cybergarage/x3d/X3DParserTokenizer.h \
	../../include/cybergarage/x3d/XMLElement.h \
	../../include/cybergarage/x3d/XMLNode.h \
	../../src/cybergarage/x3d/VRML97.l \
	../../src/cybergarage/x3d/VRML97.y

#libcx3d_a_SOURCES = \
libcx3d_la_SOURCES = \
	../../src/cybergarage/x3d/AnchorNode.cpp \
	../../src/cybergarage/x3d/AppearanceNode.cpp \
	../../src/cybergarage/x3d/Arc2DNode.cpp \
	../../src/cybergarage/x3d/ArcClose2DNode.cpp \
	../../src/cybergarage/x3d/AudioClipNode.cpp \
	../../src/cybergarage/x3d/BackgroundNode.cpp \
	../../src/cybergarage/x3d/BillboardNode.cpp \
	../../src/cybergarage/x3d/BindableNode.cpp \
	../../src/cybergarage/x3d/BooleanFilterNode.cpp \
	../../src/cybergarage/x3d/BooleanSequencerNode.cpp \
	../../src/cybergarage/x3d/BooleanTimeTriggerNode.cpp \
	../../src/cybergarage/x3d/BooleanToggleNode.cpp \
	../../src/cybergarage/x3d/BooleanTriggerNode.cpp \
	../../src/cybergarage/x3d/Bounded2DNode.cpp \
	../../src/cybergarage/x3d/BoundedGrouping2DNode.cpp \
	../../src/cybergarage/x3d/BoundedGroupingNode.cpp \
	../../src/cybergarage/x3d/BoundedNode.cpp \
	../../src/cybergarage/x3d/BoundingBox.cpp \
	../../src/cybergarage/x3d/BoundingBox2D.cpp \
	../../src/cybergarage/x3d/BoxNode.cpp \
	../../src/cybergarage/x3d/Circle2DNode.cpp \
	../../src/cybergarage/x3d/CollisionNode.cpp \
	../../src/cybergarage/x3d/ColorInterpolatorNode.cpp \
	../../src/cybergarage/x3d/ColorNode.cpp \
	../../src/cybergarage/x3d/ColorRGBANode.cpp \
	../../src/cybergarage/x3d/ComposedGeometryNode.cpp \
	../../src/cybergarage/x3d/ConeNode.cpp \
	../../src/cybergarage/x3d/CoordinateInterpolator2DNode.cpp \
	../../src/cybergarage/x3d/CoordinateInterpolatorNode.cpp \
	../../src/cybergarage/x3d/CoordinateNode.cpp \
	../../src/cybergarage/x3d/CylinderNode.cpp \
	../../src/cybergarage/x3d/CylinderSensorNode.cpp \
	../../src/cybergarage/x3d/DEF.cpp \
	../../src/cybergarage/x3d/DEFNode.cpp \
	../../src/cybergarage/x3d/DirectionalLightNode.cpp \
	../../src/cybergarage/x3d/Disk2DNode.cpp \
	../../src/cybergarage/x3d/DragSensorNode.cpp \
	../../src/cybergarage/x3d/ElevationGridNode.cpp \
	../../src/cybergarage/x3d/EnvironmentalSensorNode.cpp \
	../../src/cybergarage/x3d/Event.cpp \
	../../src/cybergarage/x3d/ExtrusionNode.cpp \
	../../src/cybergarage/x3d/Field.cpp \
	../../src/cybergarage/x3d/FileGIF89a.cpp \
	../../src/cybergarage/x3d/FileImage.cpp \
	../../src/cybergarage/x3d/FileJPEG.cpp \
	../../src/cybergarage/x3d/FilePNG.cpp \
	../../src/cybergarage/x3d/FileTarga.cpp \
	../../src/cybergarage/x3d/FileUtil.cpp \
	../../src/cybergarage/x3d/FillPropertiesNode.cpp \
	../../src/cybergarage/x3d/FogNode.cpp \
	../../src/cybergarage/x3d/FontStyleNode.cpp \
	../../src/cybergarage/x3d/Geometry2DNode.cpp \
	../../src/cybergarage/x3d/Geometry3DNode.cpp \
	../../src/cybergarage/x3d/GeometryNode.cpp \
	../../src/cybergarage/x3d/GroupNode.cpp \
	../../src/cybergarage/x3d/Grouping2DNode.cpp \
	../../src/cybergarage/x3d/GroupingNode.cpp \
	../../src/cybergarage/x3d/ImageTextureNode.cpp \
	../../src/cybergarage/x3d/IndexedFaceSetNode.cpp \
	../../src/cybergarage/x3d/IndexedLineSetNode.cpp \
	../../src/cybergarage/x3d/InlineNode.cpp \
	../../src/cybergarage/x3d/IntegerSequencerNode.cpp \
	../../src/cybergarage/x3d/IntegerTriggerNode.cpp \
	../../src/cybergarage/x3d/InterpolatorNode.cpp \
	../../src/cybergarage/x3d/JNode.cpp \
	../../src/cybergarage/x3d/JScript.cpp \
	../../src/cybergarage/x3d/JavaVM.cpp \
	../../src/cybergarage/x3d/KeyDeviceSensorNode.cpp \
	../../src/cybergarage/x3d/KeySensorNode.cpp \
	../../src/cybergarage/x3d/LODNode.cpp \
	../../src/cybergarage/x3d/LightNode.cpp \
	../../src/cybergarage/x3d/LinePropertiesNode.cpp \
	../../src/cybergarage/x3d/LoadSensorNode.cpp \
	../../src/cybergarage/x3d/MFBool.cpp \
	../../src/cybergarage/x3d/MFChar.cpp \
	../../src/cybergarage/x3d/MFColor.cpp \
	../../src/cybergarage/x3d/MFColorRGBA.cpp \
	../../src/cybergarage/x3d/MFDouble.cpp \
	../../src/cybergarage/x3d/MFFloat.cpp \
	../../src/cybergarage/x3d/MFInt32.cpp \
	../../src/cybergarage/x3d/MFNode.cpp \
	../../src/cybergarage/x3d/MFRotation.cpp \
	../../src/cybergarage/x3d/MFString.cpp \
	../../src/cybergarage/x3d/MFTime.cpp \
	../../src/cybergarage/x3d/MFVec2d.cpp \
	../../src/cybergarage/x3d/MFVec2f.cpp \
	../../src/cybergarage/x3d/MFVec3d.cpp \
	../../src/cybergarage/x3d/MFVec3f.cpp \
	../../src/cybergarage/x3d/MField.cpp \
	../../src/cybergarage/x3d/MaterialNode.cpp \
	../../src/cybergarage/x3d/MathUtil.cpp \
	../../src/cybergarage/x3d/MovieTextureNode.cpp \
	../../src/cybergarage/x3d/MultiTextureCoordinateNode.cpp \
	../../src/cybergarage/x3d/MultiTextureNode.cpp \
	../../src/cybergarage/x3d/MultiTextureTransformNode.cpp \
	../../src/cybergarage/x3d/NavigationInfoNode.cpp \
	../../src/cybergarage/x3d/NetworkSensorNode.cpp \
	../../src/cybergarage/x3d/Node.cpp \
	../../src/cybergarage/x3d/NodeList.cpp \
	../../src/cybergarage/x3d/NodeSequencerNode.cpp \
	../../src/cybergarage/x3d/NodeType.cpp \
	../../src/cybergarage/x3d/NormalInterpolatorNode.cpp \
	../../src/cybergarage/x3d/NormalNode.cpp \
	../../src/cybergarage/x3d/OrientationInterpolatorNode.cpp \
	../../src/cybergarage/x3d/PROTO.cpp \
	../../src/cybergarage/x3d/Parser.cpp \
	../../src/cybergarage/x3d/ParserFunc.cpp \
	../../src/cybergarage/x3d/ParserNode.cpp \
	../../src/cybergarage/x3d/PixelTextureNode.cpp \
	../../src/cybergarage/x3d/PlaneSensorNode.cpp \
	../../src/cybergarage/x3d/PointLightNode.cpp \
	../../src/cybergarage/x3d/PointSetNode.cpp \
	../../src/cybergarage/x3d/Polyline2DNode.cpp \
	../../src/cybergarage/x3d/Polypoint2DNode.cpp \
	../../src/cybergarage/x3d/PositionInterpolator2DNode.cpp \
	../../src/cybergarage/x3d/PositionInterpolatorNode.cpp \
	../../src/cybergarage/x3d/ProximitySensorNode.cpp \
	../../src/cybergarage/x3d/Rectangle2DNode.cpp \
	../../src/cybergarage/x3d/RootNode.cpp \
	../../src/cybergarage/x3d/Route.cpp \
	../../src/cybergarage/x3d/RouteList.cpp \
	../../src/cybergarage/x3d/RouteNode.cpp \
	../../src/cybergarage/x3d/SFBool.cpp \
	../../src/cybergarage/x3d/SFChar.cpp \
	../../src/cybergarage/x3d/SFColor.cpp \
	../../src/cybergarage/x3d/SFColorRGBA.cpp \
	../../src/cybergarage/x3d/SFDouble.cpp \
	../../src/cybergarage/x3d/SFFloat.cpp \
	../../src/cybergarage/x3d/SFImage.cpp \
	../../src/cybergarage/x3d/SFInt32.cpp \
	../../src/cybergarage/x3d/SFMatrix.cpp \
	../../src/cybergarage/x3d/SFNode.cpp \
	../../src/cybergarage/x3d/SFRotation.cpp \
	../../src/cybergarage/x3d/SFString.cpp \
	../../src/cybergarage/x3d/SFTime.cpp \
	../../src/cybergarage/x3d/SFVec2d.cpp \
	../../src/cybergarage/x3d/SFVec2f.cpp \
	../../src/cybergarage/x3d/SFVec3d.cpp \
	../../src/cybergarage/x3d/SFVec3f.cpp \
	../../src/cybergarage/x3d/ScalarInterpolatorNode.cpp \
	../../src/cybergarage/x3d/Scene.cpp \
	../../src/cybergarage/x3d/SceneGraph.cpp \
	../../src/cybergarage/x3d/SceneNode.cpp \
	../../src/cybergarage/x3d/ScriptNode.cpp \
	../../src/cybergarage/x3d/SensorNode.cpp \
	../../src/cybergarage/x3d/SequencerNode.cpp \
	../../src/cybergarage/x3d/Shape2DNode.cpp \
	../../src/cybergarage/x3d/ShapeNode.cpp \
	../../src/cybergarage/x3d/SoundNode.cpp \
	../../src/cybergarage/x3d/SoundSourceNode.cpp \
	../../src/cybergarage/x3d/SphereNode.cpp \
	../../src/cybergarage/x3d/SphereSensorNode.cpp \
	../../src/cybergarage/x3d/SpotLightNode.cpp \
	../../src/cybergarage/x3d/StaticGroupNode.cpp \
	../../src/cybergarage/x3d/StringSensorNode.cpp \
	../../src/cybergarage/x3d/StringUtil.cpp \
	../../src/cybergarage/x3d/SwitchNode.cpp \
	../../src/cybergarage/x3d/TextNode.cpp \
	../../src/cybergarage/x3d/Texture2DNode.cpp \
	../../src/cybergarage/x3d/TextureCoordinateGeneratorNode.cpp \
	../../src/cybergarage/x3d/TextureCoordinateNode.cpp \
	../../src/cybergarage/x3d/TextureNode.cpp \
	../../src/cybergarage/x3d/TextureTransformNode.cpp \
	../../src/cybergarage/x3d/TimeSensorNode.cpp \
	../../src/cybergarage/x3d/TimeTriggerNode.cpp \
	../../src/cybergarage/x3d/TouchSensorNode.cpp \
	../../src/cybergarage/x3d/Transform2DNode.cpp \
	../../src/cybergarage/x3d/TransformNode.cpp \
	../../src/cybergarage/x3d/TriangleFanSetNode.cpp \
	../../src/cybergarage/x3d/TriangleSet2DNode.cpp \
	../../src/cybergarage/x3d/TriangleSetNode.cpp \
	../../src/cybergarage/x3d/TriangleStripSetNode.cpp \
	../../src/cybergarage/x3d/TriggerNode.cpp \
	../../src/cybergarage/x3d/UrlFile.cpp \
	../../src/cybergarage/x3d/VRML97.tab.cpp \
	../../src/cybergarage/x3d/VRML97.yy.cpp \
	../../src/cybergarage/x3d/VRML97Parser.cpp \
	../../src/cybergarage/x3d/VRML97ParserFunc.cpp \
	../../src/cybergarage/x3d/ViewpointNode.cpp \
	../../src/cybergarage/x3d/VisibilitySensorNode.cpp \
	../../src/cybergarage/x3d/WorldInfoNode.cpp \
	../../src/cybergarage/x3d/X3DParser.cpp \
	../../src/cybergarage/x3d/X3DParserHandlers.cpp \
	../../src/cybergarage/x3d/X3DParserTokenizer.cpp \
	../../src/cybergarage/x3d/XMLElement.cpp \
	../../src/cybergarage/x3d/XMLNode.cpp
